2013-07-01  dmg  <dmg@uvic.ca>

	* filter/criticalword.dict: tighten some definitions to avoid
	false positives without hurting precision. In particular, removed
	"subject" as a "legal" term.

	* senttok/licensesentence.dict (publicDomain): Added another public domain.

2011-02-08    <dmg@uvic.ca>

	* senttok/licensesentence.dict: Renamed the GPLVer2+KDE to
	GPLVer2or3KDE+, which I believe is more appropriate (license GPL
	v2, v3 or any further version approved by the KDE e.v.

2011-02-03    <dmg@uvic.ca>

	* extComments/extComments.pl (Determine_Comments_Extractor): Fixed
	a bug introduced in the comments extractor.

	* matcher/rules.dict: Fixed a bug in the sunRPM license. It wasn't detected.

	* filter/criticalword.dict: strenghten some rules to avoid some 
	false positives in good sentences.

2011-01-28    <dmg@uvic.ca>

	* senttok/senttok.pl (Normalize_GPL): Fixed a bug in the parsing
	of version strings. "v." is considered a version iff followed by a
	number.

	* matcher/rules.dict, licensesentence.dict: added a new license
	GPLVer2+KDE (a variant of the GPLv2+ where the KDE has a say in
	terms of which license it can be replaced with in the future).

2010-11-19  dmg  <dmg@uvic.ca>

	* ninka.pl: Uncommented a line that I left commented by mistake.

2010-11-10  dmg  <dmg@uvic.ca>

	* Released pre-release version 1.0-pre2
	
	* Added path to the files in the tar file.
	
	* README: Fixed errors (patch by Armijn Hemel)
 
	* extComments/extComments.pl (Determine_Comments_Extractor): Added
	the option to not use the comments extractor.

	* Now that Paul has given us permission, remove patching process.

	* Cleanup files

2010-08-07  dmg  <dmg@uvic.ca>

	* Prepared the release to the public.
	

